<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/filters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/filters"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/reset_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_all"
        android:textColor="@color/blue_1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/filters"
        app:layout_constraintBottom_toBottomOf="@id/filters"
        android:layout_marginEnd="16dp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sort_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_by"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filters"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sort_by"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp">
        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/date_newest_first"
            />
        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_oldest_first"
            />
    </RadioGroup>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/task_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_type"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bug_fix_confirmations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task_type"
        android:text="@string/buf_fix_confirmations"
        android:textSize="12sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bug_reproductions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/bug_fix_confirmations"
        app:layout_constraintTop_toTopOf="@id/bug_fix_confirmations"
        android:text="@string/bug_reproductions"
        android:textSize="12sp"
        android:layout_marginStart="16dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/apply_filters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:text="@string/apply_filters"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bug_fix_confirmations"
        android:layout_marginVertical="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>