<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Lesson17GalleryActivity">
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/lesson17fragment"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="400dp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/galleryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/gallery"
        app:layout_constraintTop_toBottomOf="@id/lesson17fragment"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sendMessageFragmentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/galleryButton"
        android:layout_marginStart="16dp"
        android:text="@string/send_message"
        app:layout_constraintTop_toTopOf="@id/galleryButton"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/gallery_2_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/sendMessageFragmentButton"
        android:layout_marginStart="16dp"
        android:text="@string/gallery_2"
        app:layout_constraintTop_toTopOf="@id/galleryButton"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ringtone_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/galleryButton"
        app:layout_constraintEnd_toEndOf="@id/galleryButton"
        android:text="@string/ringtone"
        app:layout_constraintTop_toBottomOf="@id/galleryButton"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/view_pager_2_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/sendMessageFragmentButton"
        app:layout_constraintEnd_toEndOf="@id/sendMessageFragmentButton"
        android:text="@string/viewpager2"
        app:layout_constraintTop_toBottomOf="@id/sendMessageFragmentButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>