<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sorting1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/sorting1"
        android:fontFamily="@font/roboto_black"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sorting2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        android:background="@color/white"
        android:drawableStart="@drawable/tune_blue"
        android:drawableEnd="@drawable/black_right_arrow"
        android:drawablePadding="@dimen/_8dp"
        android:fontFamily="@font/roboto_bold"
        android:paddingHorizontal="@dimen/_16dp"
        android:paddingVertical="@dimen/_8dp"
        android:text="@string/sorting2"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sp"
        app:layout_constraintTop_toBottomOf="@+id/sorting1"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/newest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/sorting2"
        app:layout_constraintBottom_toBottomOf="@+id/sorting2"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="@dimen/_36dp"
        android:text="@string/newest1"
        android:textSize="@dimen/_12sp"
        android:drawablePadding="@dimen/_8dp"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/categories1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sorting2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/categories1"
        android:fontFamily="@font/roboto_black"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcView"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16dp"
        app:layout_constraintTop_toBottomOf="@id/categories1"
        tools:listitem="@layout/recycler_view_item"
        />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel1"
            app:layout_constraintEnd_toStartOf="@+id/apply_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rcView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/apply_button"
            android:layout_width="@dimen/_180dp"
            android:layout_height="wrap_content"
            android:text="@string/apply1"
            app:layout_constraintBottom_toBottomOf="@+id/cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancel_button"
            android:backgroundTint="@color/blue_1"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@+id/cancel_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>