<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/comment_image"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/comment_box_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bug_comment"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/comment_image"
        app:layout_constraintTop_toTopOf="@+id/comment_image"
        android:layout_marginStart="16dp"
        android:textSize="@dimen/_16sp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_io_update"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/comment_image"
        app:layout_constraintTop_toBottomOf="@+id/text1"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto_bold"
        android:textSize="@dimen/_16sp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/comment_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coverage"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/comment_image"
        app:layout_constraintTop_toBottomOf="@+id/text2"
        android:layout_marginStart="16dp"
        android:textSize="@dimen/_12sp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/only_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/only_product"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto_light"
        app:layout_constraintStart_toEndOf="@+id/comment_image"
        app:layout_constraintTop_toBottomOf="@+id/comment_text"
        android:layout_marginStart="16dp"
        android:textSize="@dimen/_12sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>