<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/android_image"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/android_head_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/cooperko"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CooperKo"
        app:layout_constraintStart_toEndOf="@+id/android_image"
        app:layout_constraintTop_toTopOf="@+id/android_image"
        android:layout_marginStart="16dp"
        android:textSize="@dimen/_10sp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/advanced_ticketing"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/android_image"
        app:layout_constraintTop_toBottomOf="@+id/cooperko"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto_bold"
        android:textSize="@dimen/_16sp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/ends_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coverage"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/android_image"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        android:layout_marginStart="16dp"
        android:textSize="@dimen/_12sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>